@@ -202,6 +202,9 @@ subscript-check:		max
 # Functionality of JUSTIFY for INITIALIZE verb and initialization of storage
 init-justify:			no
 
+# Normalize BCD on-the-fly
+normalize-bcd:			no
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
