@@ -460,6 +460,7 @@ test.conf: missing definitions:
 	no definition of 'device-mnemonics'
 	no definition of 'xml-parse-xmlss'
 	no definition of 'areacheck'
+	no definition of 'normalize-bcd'
 	no definition of 'comment-paragraphs'
 	no definition of 'control-division'
 	no definition of 'partial-replace-when-literal-src'
